--- a/src/app/shared/dynamic-modal/dynamic-modal.component.html
+++ b/src/app/shared/dynamic-modal/dynamic-modal.component.html
@@ -12,7 +12,8 @@
                             <div class="col-md-{{ field.cols || 6 }}">
                                 <label class="form-label">
                                     {{ field.label }}
-                                    <span *ngIf="field.required" class="text-danger">*</span> <!-- ✅ Asterisco rojo solo si el campo es obligatorio -->
+                                    <span *ngIf="field.required" class="text-danger">*</span>
+                                    <!-- ✅ Asterisco rojo solo si el campo es obligatorio -->
                                 </label>
                                 <input *ngIf="field.type === 'text'" type="text" class="form-control"
                                     [formControlName]="field.name">
@@ -21,7 +22,8 @@
 
                                 <select *ngIf="field.type === 'select'" class="form-select"
                                     [formControlName]="field.name">
-                                    <option *ngFor="let option of field.options" [value]="option">{{ option }}</option>
+                                    <option *ngFor="let option of field.options" [value]="option.value">{{ option.label }}</option>
+
                                 </select>
 
                                 <div *ngIf="modalForm.get(field.name)?.invalid && modalForm.get(field.name)?.touched"
