--- a/src/app/view/empleados/empleados.component.scss
+++ b/src/app/view/empleados/empleados.component.scss
@@ -110,11 +110,11 @@ input[type="text"]:focus::placeholder {
 
 .mb-0 {
   color: var(--primary-color);
-  font-weight: bold;
+  font-weight: 500 !important;
 
   &:hover {
-    transform: translateY(-2px);
-   // box-shadow: 0 6px 16px rgba(0, 120, 215, 0.3);
+    //transform: translateY(-2px);
+    // box-shadow: 0 6px 16px rgba(0, 120, 215, 0.3);
     color: var(--primary-color) !important;
   }
 
@@ -161,4 +161,82 @@ input[type="text"]:focus::placeholder {
 
 .input-nombre {
   text-align: center;
+}
+
+
+/*
+* Modal de card (Detalles de usuarios)
+*/
+.text-dark {
+  color: #343a40 !important;
+  margin-bottom: 15px;
+  font-weight: 400 !important;
+
+}
+
+.text-secondary {
+    margin-top: 0;
+    margin-bottom: 3px;
+    color: var(--primary-color) !important;
+}
+
+.avatar-widget {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.avatar-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+    z-index: 1; // Asegura que la imagen esté por encima del overlay
+}
+
+.avatar-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); // Fondo semitransparente
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2; // Asegura que el overlay esté por encima de la imagen
+    opacity: 1; // Visible por defecto
+    transition: opacity 0.3s ease;
+
+    .fa-camera {
+        color: white;
+        font-size: 24px;
+    }
+}
+
+// Clase para ocultar el overlay cuando hay una imagen cargada
+.show-on-hover {
+    opacity: 0; // Inicialmente invisible
+
+    &:hover {
+        opacity: 1; // Visible al hacer hover
+    }
+}
+
+.modal-header{
+   background: var(--degradado-color);
+}
+
+.modal-title{
+    text-align: left;
+       color: var(--details-color);
+       font-weight: bold;
+}
+
+.card{
+   background: var(--degradado-pastel) !important;
 }
